--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,10 @@
-# Example environment file for Docker Compose
-# Copy to .env and customize for your environment
+# EXAMPLE Environment file for ML Audio Classification
+# GCP Settings matching CLAUDE.md specifications
 
 # Google Cloud Platform Settings (REQUIRED)
-GCP_PROJECT_ID=your-project-id
-GCS_BUCKET_NAME=dse-staff
-GCP_CREDENTIALS_PATH=./credentials
-
-# Data and Results Paths (will be created automatically)
-DATA_PATH=./data
-RESULTS_PATH=./results
-LOGS_PATH=./logs
-
-# Application Settings
-LOG_LEVEL=INFO
-MAX_WORKERS=4
-AUDIO_SAMPLE_RATE=22050
-
-# ML Settings
-RANDOM_SEED=42
-DEFAULT_CV_FOLDS=5
+GCP_PROJECT_ID=name-of-your-gcp-project
+GCS_BUCKET_NAME=name-of-your-gcs-bucket
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/secret.json
 
 # Optional: GPU support (requires nvidia-docker)
 # NVIDIA_VISIBLE_DEVICES=all
