--- a/.gitignore
+++ b/.gitignore
@@ -1,99 +1,44 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
 
 # Distribution / packaging
-.Python
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
-.installed.cfg
 *.egg
-MANIFEST
 
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
+# Testing
 .pytest_cache/
+.coverage
+htmlcov/
+*.cover
 
 # Virtual environments
 .env
 .venv
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
+env/
 
-# IDEs
-.idea/
+# IDE
 .vscode/
+.idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Project specific
+# Project specific - actual directories in your app
 results/
-data/
-logs/
+credentials/
 *.log
-checkpoints/
-models/
-experiments/
 
-# Jupyter Notebook
+# Jupyter
 .ipynb_checkpoints
 
-# Mypy
+# Python type checking
 .mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Google Cloud
-service-account.json
-google-credentials.json
-gcp-key.json
-credentials/
-credentials/**/*
