--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "ml-audio-classification"
 version = "0.1.0"
 description = "Kubernetes-deployable ML audio classification experiment application"
 authors = [
-    {name = "Audio ML Team", email = "team@example.com"}
+    {name = "DSE Soundhub Team", email = ""}
 ]
 readme = "README.md"
 license = {text = "MIT"}
@@ -23,26 +23,34 @@ classifiers = [
 ]
 
 dependencies = [
-    "numpy>=1.24.0",
-    "pandas>=2.0.0",
-    "scikit-learn>=1.3.0",
-    "matplotlib>=3.7.0",
+    "numpy>=1.24.0,<1.25.0",
+    "pandas>=2.0.0,<2.1.0",
+    "scikit-learn>=1.6.1,<2.0.0",
+    "scipy>=1.10.0,<1.12.0",
+    "matplotlib>=3.7.0,<3.8.0",
     "seaborn>=0.12.0",
-    "pydantic>=2.0.0",
-    "pydantic-settings>=2.0.0",
-    "google-cloud-storage>=2.10.0",
-    "google-cloud-logging>=3.5.0",
-    "tensorflow>=2.13.0",
+    "pydantic>=2.3.0,<2.4.0",
+    "pydantic-settings>=2.0.0,<2.1.0",
+    "google-cloud-storage>=2.10.0,<2.11.0",
+    "google-cloud-logging>=3.6.0,<3.7.0",
+    "tensorflow>=2.13.0,<2.15.0",
+    "tensorflow-hub>=0.15.0",
     "torch>=2.0.0",
+    "torchvision>=0.15.0",
     "torchaudio>=2.0.0",
-    "librosa>=0.10.0",
-    "asyncio",
-    "aiofiles>=23.0.0",
-    "click>=8.1.0",
-    "python-dotenv>=1.0.0",
-    "structlog>=23.0.0",
-    "rich>=13.0.0",
-    "typer>=0.9.0",
+    "timm>=0.9.0",
+    "librosa>=0.10.0,<0.11.0",
+    "soundfile>=0.12.0,<0.13.0",
+    "opensoundscape>=0.10.0",
+    "onnx>=1.14.0",
+    "onnxruntime>=1.15.0",
+    "aiofiles>=23.0.0,<24.0.0",
+    "click>=8.1.0,<8.2.0",
+    "python-dotenv>=1.0.0,<1.1.0",
+    "structlog>=23.1.0,<23.2.0",
+    "rich>=13.5.0,<13.6.0",
+    "typer>=0.9.0,<0.10.0",
+    "tqdm",
 ]
 
 [project.optional-dependencies]
