--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 # EXAMPLE Environment file for ML Audio Classification
-# GCP Settings matching CLAUDE.md specifications
+# Copy this to .env and update with your values
 
 # Google Cloud Platform Settings (REQUIRED)
-GCP_PROJECT_ID=name-of-your-gcp-project
-GCS_BUCKET_NAME=name-of-your-gcs-bucket
-GOOGLE_APPLICATION_CREDENTIALS=/path/to/secret.json
+# Get these from your Google Cloud Console
+GCP_PROJECT_ID=your-gcp-project-id
+GCS_BUCKET_NAME=your-gcs-bucket-name
+GOOGLE_APPLICATION_CREDENTIALS=./credentials/gcp-key.json
 
-# Optional: GPU support (requires nvidia-docker)
-# NVIDIA_VISIBLE_DEVICES=all
+# Application Settings (OPTIONAL)
+TESTING_MODE=false
+LOG_LEVEL=INFO
+MAX_WORKERS=4
