--- a/k8s/03-experiment-job.yaml
+++ b/k8s/03-experiment-job.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ml-audio-classification
-        image: ml-audio-classification:latest
+        image: ghcr.io/avanscoyoc/ml-audio-classification:latest
         imagePullPolicy: IfNotPresent
         
         # Environment variables from ConfigMap and Secret
